// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionExplorerLink should render a 'block' link 1`] = `
<div>
  <div
    class="sc-eCssSg ckhYlE"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-700"
      >
        Block ID
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="flex items-center space-x-3"
        >
          <a
            class="sc-gsTCUz ifOIR inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
            data-testid="Link"
            rel="noopener noreferrer"
            to="block-link}"
          >
            <span
              class="sc-dlfnbm text-theme-primary-dark"
              data-testid="TruncateMiddle"
            >
              test-id
            </span>
          </a>
          <span
            class="flex text-theme-primary-300 dark:text-theme-neutral-600"
          >
            <div
              class="inline-block cursor-pointer"
              data-testid="clipboard__wrapper"
            >
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  copy.svg
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionExplorerLink should render a 'transaction' link 1`] = `
<div>
  <div
    class="sc-eCssSg ckhYlE"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-700"
      >
        ID
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="flex items-center space-x-3"
        >
          <a
            class="sc-gsTCUz ifOIR inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
            data-testid="Link"
            rel="noopener noreferrer"
            to="transaction-link}"
          >
            <span
              class="sc-dlfnbm text-theme-primary-dark"
              data-testid="TruncateMiddle"
            >
              test-id
            </span>
          </a>
          <span
            class="flex text-theme-primary-300 dark:text-theme-neutral-600"
          >
            <div
              class="inline-block cursor-pointer"
              data-testid="clipboard__wrapper"
            >
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  copy.svg
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
